[package]
name = "hello_tetra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytemuck = "1.9.1"
ggrs = "0.9.1"
serde = { version = "1.0.137", features = ["derive"] }
tetra = "0.7"
