[package]
name = "esport_heaven_online"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytemuck = "1.9.1"
fixed = "1.15.0"
fixed-macro = "1.1.1"
fixed-sqrt = "0.2.5"
ggrs = "0.9.1"
instant = "0.1.12"
quick-xml = { version = "0.23.0", features = ["serialize"] }
serde = { version = "1.0.137", features = ["derive"] }
structopt = "0.3.26"
tetra = "0.7"
